--- a/teste.html
+++ b/teste.html
@@ -28,8 +28,10 @@
 
                     <div class="dadosContainer">
                         <span>Cliente: ${nomeCliente}</span>
-                        <span>Paciênte: ${data.paciente}</span>
+                        <span>E-mail: ${data.cart[0].client_email;}</span>
+                        <span>Contato: ${data.cart[0].phone;}</span>
                     </div>
+                    <span>Paciênte: ${data.paciente}</span>
                     
                     <table class="tabelaExtrato">
                         ${itemsHTML}
