Progress section extrato

--- a/teste.html
+++ b/teste.html
@@ -36,7 +36,19 @@
                     <table class="tabelaExtrato">
                         ${itemsHTML}
                     </table>
-
+                    <table>
+                        <th><tr><th>ID</th><th>Data</th><th>Observação</th><th>Produtos</th><th>Preço(U)</th><th>Total</th><th>Saldo</th></tr></th><tbody>
+                    <table>
+                        <tr>
+                            <th>ID</th>
+                            <th>Data</th>
+                            <th>Observação</th>
+                            <th>Produtos</th>
+                            <th>Preço (u)</th>
+                            <th>Total</th>
+                            <th>Saldo</th>
+                        </tr>
+                    </table>
                     <div class="saldoClientContainer">
                         <span>Total do pedido: <em>R$ ${totalValueString}</em></span>
                         <span> Saldo Anterior: <em>R$ ${saldoAnterior.toFixed(2)}</em></span>
