--- a/teste.html
+++ b/teste.html
@@ -59,3 +59,18 @@
         </main>
     </body>
 </html>
+
+<table class='tabelaGeral tabelaConsultarExtratos'>
+    <tr>
+        <th>ID</th>
+        <th>Data</th>
+        <th>Paciente</th>
+        <th>Produto</th>
+        <th>Preço (U)</th>
+        <th>Qt.</th>
+        <th>Preço</th>
+        <th>Total</th>
+        <th>Saldo Anterior</th>
+        <th>Saldo Atual</th>
+    </tr>
+<tbody>";
