Update da tela de login
Front-end atualizado, botão de mostrar/ esconder senha inserido. E também foi feita a estilisação da mensagem de erro ao logar.

--- a/teste.html
+++ b/teste.html
@@ -1,76 +1,1 @@
-<html>
-    <head>
-        <title>Extrato de Compra</title>
-        <link rel="stylesheet" href="media/css/estilos.css">
-    </head>
-    <body>
-        <header>
-            <div class="logoMarca">
-                <figure>
-                    <img src="media/img/denteJoia.png" alt="">
-                </figure>
-                <div class="logoTipo">
-                    <h1>L.J. - Laboratório de <em>Prótese Dentária Joia</em></h1>
-                    <address>
-                        <p>RUA VICENTE PEREIRA DE ASSUNÇÃO, 134 | CEP - 04658000 - VL CONTÂNCIA</p>
-                        <p>CONTATO: (11) 99836-17314 (11) 94945-2727</p>
-                    </address>
-                </div>
-            </div>
-        </header>
-        <main>
-            <div class="impressaoContainer">
-                <div class="impressaoTabela">
-                    <div class="dadosVenda">
-                        <p>Resumo do Pedido: #${data.lastSaleId}</p>
-                        <p>Data: ${dataFormatada}</p>
-                    </div>
-
-                    <div class="dadosContainer">
-                        <span>Cliente: ${nomeCliente}</span>
-                        <span>E-mail: ${data.cart[0].client_email;}</span>
-                        <span>Contato: ${data.cart[0].phone;}</span>
-                    </div>
-                    <span>Paciênte: ${data.paciente}</span>
-                    
-                    <table class="tabelaExtrato">
-                        ${itemsHTML}
-                    </table>
-                    <table>
-                        <th><tr><th>ID</th><th>Data</th><th>Observação</th><th>Produtos</th><th>Preço(U)</th><th>Total</th><th>Saldo</th></tr></th><tbody>
-                    <table>
-                        <tr>
-                            <th>ID</th>
-                            <th>Data</th>
-                            <th>Observação</th>
-                            <th>Produtos</th>
-                            <th>Preço (u)</th>
-                            <th>Total</th>
-                            <th>Saldo</th>
-                        </tr>
-                    </table>
-                    <div class="saldoClientContainer">
-                        <span>Total do pedido: <em>R$ ${totalValueString}</em></span>
-                        <span> Saldo Anterior: <em>R$ ${saldoAnterior.toFixed(2)}</em></span>
-                        <span> Saldo Atual: <em>R$ ${saldoDevedorClient}</em></span>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </body>
-</html>
-
-<table class='tabelaGeral tabelaConsultarExtratos'>
-    <tr>
-        <th>ID</th>
-        <th>Data</th>
-        <th>Paciente</th>
-        <th>Produto</th>
-        <th>Preço (U)</th>
-        <th>Qt.</th>
-        <th>Preço</th>
-        <th>Total</th>
-        <th>Saldo Anterior</th>
-        <th>Saldo Atual</th>
-    </tr>
-<tbody>";
+<svg xmlns='http://www.w3.org/2000/svg' width='36' height='36' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='ai ai-TrashCan'><path d='M4 6h16l-1.58 14.22A2 2 0 0 1 16.432 22H7.568a2 2 0 0 1-1.988-1.78L4 6z'/><path d='M7.345 3.147A2 2 0 0 1 9.154 2h5.692a2 2 0 0 1 1.81 1.147L18 6H6l1.345-2.853z'/><path d='M2 6h20'/><path d='M10 11v5'/><path d='M14 11v5'/></svg>
