front-end EXTRATO FINAL

--- a/teste.html
+++ b/teste.html
@@ -35,8 +35,7 @@
                     <span class="pacienteContainer">Paciênte: ${data.paciente}</span>
                     
                     <table class="tabelaExtrato">
-                        ${paymentDetailsHTML}
-                        ${paymentItemsHTML}
+                        + tableHTML +
                     </table>
 
                     <div class="saldoClientContainer">
