--- a/teste.html
+++ b/teste.html
@@ -48,3 +48,15 @@
         </main>
     </body>
 </html>
+
+"<div class='dadosContainer'>" +
+    "<div class='divisaoDadosContainer'>" +
+        "<span>Cliente: " + clientName + "</span>" +
+        "<span>Email: " + clientEmail + "</span>" +
+    "</div>"
+    "<div class='divisaoDadosContainer'>" +
+        "<span>Endereço: " + clientAddress + "</span>" +
+        "<span>Cidade: " + clientCity + "</span>" +
+        "<span>Telefone: " + clientPhone + "</span>" +
+    "</div>" +
+"</div>";
