update frontEnd Extrato

--- a/teste.html
+++ b/teste.html
@@ -49,14 +49,6 @@
     </body>
 </html>
 
-"<div class='dadosContainer'>" +
-    "<div class='divisaoDadosContainer'>" +
-        "<span>Cliente: " + clientName + "</span>" +
-        "<span>Email: " + clientEmail + "</span>" +
-    "</div>"
-    "<div class='divisaoDadosContainer'>" +
-        "<span>Endereço: " + clientAddress + "</span>" +
-        "<span>Cidade: " + clientCity + "</span>" +
-        "<span>Telefone: " + clientPhone + "</span>" +
-    "</div>" +
-"</div>";
+<div class="saldoClientContainer">
+    <span>Saldo Devedor Atual: <em>R$ ${clientDebitAmount}</em></span>
+</div>
