--- a/teste.html
+++ b/teste.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Extrato de Compra</title>
+        <title><img src="media/img/icones/tooth.png" alt="">Extrato de Compra</title>
         <link rel="stylesheet" href="media/css/estilos.css">
     </head>
     <body>
@@ -51,4 +51,13 @@
 
 <div class="saldoClientContainer">
     <span>Saldo Devedor Atual: <em>R$ ${clientDebitAmount}</em></span>
+</div>
+
+<select id="client" class="unlock" name="client">
+    <!-- Clients will be displayed here -->
+</select>
+<label for="client">Cliente</label>
+
+<div class="cartDisplay">
+    
 </div>
